# t-edit

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  SKILLS.md
GapBufferTests.dSYM/Contents/: Info.plist
GapBufferTests.dSYM/Contents/Resources/Relocations/x86_64/: GapBufferTests.yml
cmake/: mingw-toolchain.cmake
include/: GapBuffer.h
src/: GapBuffer.cpp  main.cpp
src/gui_windows/: main.cpp
tests/: gap_buffer_test.cpp
